feat: generating tokens
